--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Hello pnpm 👋</h1>
-<script type="module" src="src/game.js"></script>
+<script type="module" src="core/game.js"></script>
 </body>
 </html>
